# png_wrapper.h

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.reuse/: dep5
CMake/: pngwConfig.CMake.in
example/: CMakeLists.txt
example/assets/: dude.png.license
example/src/: CMakeLists.txt  main.c  pngw_impl.c
include/pngw/: png_wrapper.h
